@@ -132,6 +132,8 @@ lib.zyre_shouts.restype = c_int
 lib.zyre_shouts.argtypes = [zyre_p, c_char_p, c_char_p]
 lib.zyre_peers.restype = czmq.zlist_p
 lib.zyre_peers.argtypes = [zyre_p]
+lib.zyre_peers_identity.restype = czmq.zhash_p
+lib.zyre_peers_identity.argtypes = [zyre_p]
 lib.zyre_peers_by_group.restype = czmq.zlist_p
 lib.zyre_peers_by_group.argtypes = [zyre_p, c_char_p]
 lib.zyre_own_groups.restype = czmq.zlist_p
